@@ -1,3 +1,7 @@
+[B]Version 5.0.15 - 2021-03-13[/B]
+- Add buggalo error submit to kodi.drnu gmail
+- fix bug for write subtitle files on libreelec, kodi 18.9
+
 ﻿[B]Version 5.0.14 - 2021-03-06[/B]
 - Bumping version number, to re-activate addon in leia addon channel
 - Re-factor code to work on both python2 and python 3
